DevOps/K8s/example/myapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapi-service
  labels:
    name: myapi-service
    type: api
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 80
  selector:
    name: myapi-pod
    type: api
