DevOps/K8s/example/myapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapi-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: myapi-service
          servicePort: 80
